--- a/lib/schemas/definitions/default/community/1.0.0/config.json
+++ b/lib/schemas/definitions/default/community/1.0.0/config.json
@@ -250,6 +250,16 @@
               { "namespace": "nglp", "identifier": "unit" }
             ]
           }
+        },
+        {
+          "path": "book",
+          "type": "entity",
+          "label": "Books",
+          "scope": {
+            "origin": "self",
+            "target": "descendants",
+            "schemas": [{ "namespace": "nglp", "identifier": "book" }]
+          }
         }
       ]
     }
