[B] Fix featured books property + template fallback

--- a/lib/schemas/definitions/default/community/1.0.0/config.json
+++ b/lib/schemas/definitions/default/community/1.0.0/config.json
@@ -252,8 +252,8 @@
           }
         },
         {
-          "path": "book",
-          "type": "entity",
+          "path": "books",
+          "type": "entities",
           "label": "Books",
           "scope": {
             "origin": "self",
