--- a/docker/production/Dockerfile
+++ b/docker/production/Dockerfile
@@ -49,6 +49,14 @@ ENV BUNDLE_PATH=/bundle \
 ENV PATH="${BUNDLE_BIN}:${PATH}"
 ENV LD_PRELOAD=libjemalloc.so.2
 ENV REMEMBERED_WB_UNPROTECTED_OBJECTS_LIMIT_RATIO=0.01
+ENV RUBY_GC_OLDMALLOC_LIMIT=1000000000000
+ENV RUBY_GC_OLDMALLOC_LIMIT_MAX=1000000000000
+ENV RUBY_GC_HEAP_0_INIT_SLOTS=1819132
+ENV RUBY_GC_HEAP_1_INIT_SLOTS=409209
+ENV RUBY_GC_HEAP_2_INIT_SLOTS=455808
+ENV RUBY_GC_HEAP_3_INIT_SLOTS=19968
+ENV RUBY_GC_HEAP_4_INIT_SLOTS=9265
+
 
 RUN gem update --system && gem install bundler:2.7.2
 
